adjust power, armor, speed, bump, health stats; lower monster health, increase monster count; prevent overlapping spawners; slow everything down; add test sound and vibration effects; prevent iphone doubletap/hold-move issues

--- a/game/player.css
+++ b/game/player.css
@@ -53,6 +53,7 @@
 		height: auto;
 		max-height: 100%;
 		width: 100%;
+		min-width: calc(100% - 64px);
 		overflow: hidden;
 	}
 
@@ -70,7 +71,7 @@
 		background-size: contain;
 		background-position: center center;
 		background-repeat: no-repeat;
-		margin: 5vw;
+		margin: var(--borderRadius);
 		display: inline-block;
 	}
 
